force-app/main/default/objects/Opportunity/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>This field is used in order to display the PA Shipping Address on the Opp PL.
Note: To be removed as soon as the PA component on the the Opp PL is functional.</description>
    <formula>Account.PersonContact.MailingStreet  &amp; " " &amp;   Account.PersonContact.MailingCity  &amp; " " &amp;  TEXT( Account.PersonContact.MailingStateCode ) &amp; " " &amp;   Account.PersonContact.MailingPostalCode  &amp; " " &amp;  TEXT( Account.PersonContact.MailingCountryCode )</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>