force-app/main/default/objects/Opportunity/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>This field is used to display the PA Age on the Opp PL.
Note: To be removed as soon as the PA component on the Opp PL is functional.</description>
    <formula>Account.Age__c</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>