force-app/main/default/objects/Opportunity/fields/BookingCreationTime__c.field-meta.xml
<CustomField>
    <fullName>BookingCreationTime__c</fullName>
    <description>This field will be updated with the date and time at the time of Booking creation.</description>
    <label>Booking Creation Time</label>
    <type>DateTime</type>
</CustomField>