force-app/main/default/objects/Opportunity/fields/BrochureSent__c.field-meta.xml
<CustomField>
    <fullName>BrochureSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value set by process builder. returns true if an SBR task has been completed with result sent brochure</description>
    <label>Brochure Sent</label>
    <type>Checkbox</type>
</CustomField>