force-app/main/default/objects/Opportunity/fields/BrochuresToSend__c.field-meta.xml
<CustomField>
    <fullName>BrochuresToSend__c</fullName>
    <inlineHelpText>List of All the open brochures request which needs to be sent</inlineHelpText>
    <label>Brochures To Send</label>
    <length>255</length>
    <type>Text</type>
</CustomField>