force-app/main/default/objects/Opportunity/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <description>This field is used to display the campaign name thanks to which the Lead has been created in the system.</description>
    <label>Campaign Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>