force-app/main/default/objects/Opportunity/fields/CloseMainReason__c.field-meta.xml
<CustomField>
    <fullName>CloseMainReason__c</fullName>
    <description>Indicates the reason for closing the Opportunity</description>
    <inlineHelpText>Indicates the reason for closing the Opportunity</inlineHelpText>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chose to do something else</fullName>
            </value>
            <value>
                <fullName>Finds EF offer too expensive</fullName>
            </value>
            <value>
                <fullName>Had no intention</fullName>
            </value>
            <value>
                <fullName>Has no means</fullName>
            </value>
            <value>
                <fullName>Lost to competitor</fullName>
            </value>
            <value>
                <fullName>Not able to contact customer</fullName>
            </value>
            <value>
                <fullName>Wrongly Imported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>