force-app/main/default/objects/Opportunity/fields/CongaConductorPrintTemplate__c.field-meta.xml
<CustomField>
    <fullName>CongaConductorPrintTemplate__c</fullName>
    <description>Returns list of parameters for Conga composer to print templates</description>
    <formula>"&amp;id=" + Id +
"&amp;TemplateId="+Label__c+","+Letter__c+
"&amp;FP0=1" +
"&amp;AC0=1" +
"&amp;AC1=Brochure Sent - " + Letter__r.APXTConga4__Name__c +
"&amp;DS7=3" +
"&amp;QMode=Download"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Conductor Print Template</label>
    <type>Text</type>
</CustomField>