force-app/main/default/objects/Opportunity/fields/CustomerRequest__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequest__c</fullName>
    <description>This field is used to capture why the Opportunity is created when manually entering an Opportunity in the system. It is then mapped with the request type so that the correct Event is generated.</description>
    <label>Customer Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Brochure Request</fullName>
            </value>
            <value>
                <fullName>Info Request</fullName>
            </value>
            <value>
                <fullName>Price Quotation</fullName>
            </value>
            <value>
                <fullName>Reservation</fullName>
            </value>
            <value>
                <fullName>Walked In</fullName>
                <isActive>false</isActive>
                <label>Walked In</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>