force-app/main/default/objects/Opportunity/fields/DateOfDeactivation__c.field-meta.xml
<CustomField>
    <fullName>DateOfDeactivation__c</fullName>
    <defaultValue>null</defaultValue>
    <description>This field contains date and time when field IsActive__c was last time set to 'FALSE'. When Opportunity is active, then DateOfDeactivaton is set to null.</description>
    <label>Date Of Deactivation</label>
    <type>DateTime</type>
</CustomField>