force-app/main/default/objects/Opportunity/fields/DaysSinceLastContact__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceLastContact__c</fullName>
    <description>Calculates number of days from Last Contact Date Time.</description>
    <formula>if(( LastContactDateTime__c - Now() &lt; 0), NOW() - LastContactDateTime__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Contact(Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>