force-app/main/default/objects/Opportunity/fields/DemoField__c.field-meta.xml
<CustomField>
    <fullName>DemoField__c</fullName>
    <label>DemoField</label>
    <length>20</length>
    <type>Text</type>
</CustomField>