force-app/main/default/objects/Opportunity/fields/Destinations__c.field-meta.xml
<CustomField>
   <fullName>Destinations__c</fullName>
        <description>Destinations chosen by customer.</description>
        <label>Destination</label>
        <length>30</length>
        <type>Text</type>
</CustomField>