force-app/main/default/objects/Opportunity/fields/DeviceType__c.field-meta.xml
<CustomField>
    <fullName>DeviceType__c</fullName>
    <description>This field is used to store the Device Type. The value is copied over from Lead.</description>
    <label>Device Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>