force-app/main/default/objects/Opportunity/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>This field is used to be able to display DOB from the Account.
Note: To be deleted as soon as the Person Account Component on the Opportunity Layout is functional.</description>
    <formula>Account.PersonContact.Birthdate</formula>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>