force-app/main/default/objects/Opportunity/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <description>This field is used in order to display the PA Email2 on the Opp PL.
Note: To be deleted as soon as the PA component on OPP PL is functional.</description>
    <formula>Account.Email2__c</formula>
    <label>Email2</label>
    <type>Text</type>
</CustomField>