force-app/main/default/objects/Opportunity/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This field is used to display the email of the PA on the Opp PL.
Note: To be deleted as soon as the PA component on the Opp PL is functional.</description>
    <formula>Account.PersonContact.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>