force-app/main/default/objects/Opportunity/fields/FirstContactDateTime__c.field-meta.xml
<CustomField>
    <fullName>FirstContactDateTime__c</fullName>
    <description>The first time we contacted the customer. Date copied from Call Task when we reached the customer</description>
    <label>First Contact Date Time</label>
    <type>DateTime</type>
</CustomField>