force-app/main/default/objects/Opportunity/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>This field is used to be able to use the Account First Name as a merge field when sending emails.</description>
    <formula>Account.PersonContact.FirstName</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>