force-app/main/default/objects/Opportunity/fields/FollowupDateTime__c.field-meta.xml
<CustomField>
    <fullName>FollowupDateTime__c</fullName>
    <label>Follow-Up Date Time</label>
    <type>DateTime</type>
</CustomField>