force-app/main/default/objects/Opportunity/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>This field is used to display the Account Gender on the Opportunity Page Layout.
Note: To be deleted as soon as the Person Account Component on the Opportunity Page Layout is functional.</description>
    <formula>TEXT(   Account.Gender__c  )</formula>
    <label>Gender</label>
    <type>Text</type>
</CustomField>