force-app/main/default/objects/Opportunity/fields/HasPQorRESInPast30Days__c.field-meta.xml
<CustomField>
    <fullName>HasPQorRESInPast30Days__c</fullName>
    <description>Indicates whether the customer has a PQ or RES related to this Opportunity within the last 30 days</description>
    <formula>NOW() - LastPQDateTime__c &lt;= 30 || NOW() - LastRESDateTime__c &lt;= 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has PQ or RES in past 30 days</label>
    <type>Checkbox</type>
</CustomField>