force-app/main/default/objects/Opportunity/fields/HasReservationTask__c.field-meta.xml
<CustomField>
    <fullName>HasReservationTask__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Reservation Task</label>
    <type>Checkbox</type>
</CustomField>