force-app/main/default/objects/Opportunity/fields/HearAboutUs__c.field-meta.xml
<CustomField>
    <fullName>HearAboutUs__c</fullName>
    <label>Hear About Us</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HearAboutUs</valueSetName>
    </valueSet>
</CustomField>