force-app/main/default/objects/Opportunity/fields/HomePhone__c.field-meta.xml
<CustomField>
    <fullName>HomePhone__c</fullName>
    <description>This field is used to display the Person Account Home Phone on the Opportunity Layout.</description>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>