force-app/main/default/objects/Opportunity/fields/IntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>IntegrationStatus__c</fullName>
    <description>This field would be a dropdown with a list of status for Integration service.</description>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Booking Created</fullName>
            </value>
            <value>
                <fullName>Sent to Poseidon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>