force-app/main/default/objects/Opportunity/fields/InterestedToTravelInGroup__c.field-meta.xml
<CustomField>
    <fullName>InterestedToTravelInGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InterestedToTravelInGroup</label>
    <type>Checkbox</type>
</CustomField>