force-app/main/default/objects/Opportunity/fields/IsAmbassador__c.field-meta.xml
<CustomField>
    <fullName>IsAmbassador__c</fullName>
    <description>This field indicates if the linked Account is an Ambassador.</description>
    <formula>Account.IsAmbassador__c</formula>
    <label>Is Ambassador</label>
    <type>Checkbox</type>
</CustomField>