force-app/main/default/objects/Opportunity/fields/IsJunior__c.field-meta.xml
<CustomField>
    <fullName>IsJunior__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether this is an Opportunity for a Junior Course.</description>
    <label>Is Junior</label>
    <type>Checkbox</type>
</CustomField>