force-app/main/default/objects/Opportunity/fields/IsParent__c.field-meta.xml
<CustomField>
    <fullName>IsParent__c</fullName>
    <description>This field is used in order to display the PA Is Parent on the Opp PL.
Note: To be removed as soon as the PA component on the the Opp PL is functional.</description>
    <formula>Account.IsParent__c</formula>
    <label>Is Parent</label>
    <type>Checkbox</type>
</CustomField>