force-app/main/default/objects/Opportunity/fields/IsProtectedIdentity__c.field-meta.xml
<CustomField>
    <fullName>IsProtectedIdentity__c</fullName>
    <description>This field is used to be able to use Account field Is Protected Identity as a criteria on Opportunity Lightning Layout.</description>
    <formula>Account.IsProtectedIdentity__c</formula>
    <label>Is Protected Identity</label>
    <type>Checkbox</type>
</CustomField>