force-app/main/default/objects/Opportunity/fields/IsRepeat__c.field-meta.xml
<CustomField>
    <fullName>IsRepeat__c</fullName>
    <description>Returns value of Account HasBooking field</description>
    <formula>Account.HasBooking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if your customer has one or more other Opportunities in Stage Booking. This Booking could have been a CAX as well.</inlineHelpText>
    <label>Repeat Customer</label>
    <type>Checkbox</type>
</CustomField>