force-app/main/default/objects/Opportunity/fields/IsUnassigned__c.field-meta.xml
<CustomField>
    <fullName>IsUnassigned__c</fullName>
    <description>Returns true if record is assigned to Integration User</description>
    <formula>OR(Owner.FirstName +' '+ Owner.LastName  == 'Integration User', 
   Owner.FirstName +' '+ Owner.LastName  == 'Migration User')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Unassigned</label>
    <type>Checkbox</type>
</CustomField>