force-app/main/default/objects/Opportunity/fields/IsUp__c.field-meta.xml
<CustomField>
    <fullName>IsUp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate whether the Opportunity is for a University Preparation course.</description>
    <label>Is UP</label>
    <type>Checkbox</type>
</CustomField>