force-app/main/default/objects/Opportunity/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Label</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected Label does not belong to same market as Opportunity</errorMessage>
        <filterItems>
            <field>APXTConga4__Conga_Template__c.APXTConga4__Template_Type__c</field>
            <operation>equals</operation>
            <value>Label</value>
        </filterItems>
        <filterItems>
            <field>$Source.Market__c</field>
            <operation>equals</operation>
            <valueField>APXTConga4__Conga_Template__c.Market__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>notContain</operation>
            <value>Integration</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Opportunities (Label)</relationshipLabel>
    <relationshipName>LabelOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>