force-app/main/default/objects/Opportunity/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>This field is used to display the PA Language on the Opportunity PL.
Note: To be removed as soon as the PA component on Opportunity is functional.</description>
    <formula>TEXT( Account.Language__c )</formula>
    <label>Language</label>
    <type>Text</type>
</CustomField>