force-app/main/default/objects/Opportunity/fields/LastAutomationUpdateDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastAutomationUpdateDateTime__c</fullName>
    <description>Indicates when the record has been last updated due to some automation like workflow/Process builder or Trigger. This will be used to differentiate direct (User initiated) updates vs Updates which were caused by an indirect action</description>
    <label>Last Automation Update DateTime</label>
    <type>DateTime</type>
</CustomField>