force-app/main/default/objects/Opportunity/fields/LastContactDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastContactDateTime__c</fullName>
    <description>The last time we contacted the customer. Value is calculated by Process Builder</description>
    <label>Last Contact Date Time</label>
    <type>DateTime</type>
</CustomField>