force-app/main/default/objects/Opportunity/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>This field is used to store the Person Account Last Name so that this can be used as a merge field when sending an email from the Opportunity.</description>
    <formula>Account.PersonContact.LastName</formula>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>