force-app/main/default/objects/Opportunity/fields/LastPQDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastPQDateTime__c</fullName>
    <description>DateTime when last PQ task was closed for opportunity</description>
    <label>Last PQ Date Time</label>
    <type>DateTime</type>
</CustomField>