force-app/main/default/objects/Opportunity/fields/LastRESDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastRESDateTime__c</fullName>
    <description>DateTime when last RES task was closed for opportunity</description>
    <label>Last RES Date Time</label>
    <type>DateTime</type>
</CustomField>