force-app/main/default/objects/Opportunity/fields/LatestPartner__c.field-meta.xml
<CustomField>
    <fullName>LatestPartner__c</fullName>
    <description>This field is used to indicate what was the Latest Partner, meaning from where the latest request was coming from.</description>
    <label>Latest Partner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>