force-app/main/default/objects/Opportunity/fields/Letter__c.field-meta.xml
<CustomField>
    <fullName>Letter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Letter template selected for Opportunity</description>
    <label>Letter</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selected Letter does not belong to same market as Opportunity</errorMessage>
        <filterItems>
            <field>APXTConga4__Conga_Template__c.APXTConga4__Template_Type__c</field>
            <operation>equals</operation>
            <value>Letter</value>
        </filterItems>
        <filterItems>
            <field>$Source.Market__c</field>
            <operation>equals</operation>
            <valueField>APXTConga4__Conga_Template__c.Market__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>