force-app/main/default/objects/Opportunity/fields/LikelihoodToBook__c.field-meta.xml
<CustomField>
    <fullName>LikelihoodToBook__c</fullName>
    <label>Likelihood To Book</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LikelihoodToBook</valueSetName>
    </valueSet>
</CustomField>