force-app/main/default/objects/Opportunity/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>This field is used to display the PA Mobile Phone on the Opp PL.</description>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>