force-app/main/default/objects/Opportunity/fields/NumberOfCalls__c.field-meta.xml
<CustomField>
    <fullName>NumberOfCalls__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of all type of completed call tasks</description>
    <inlineHelpText>Number of Call Reached and Call Not Reached done for an Opportunity</inlineHelpText>
    <label>Number Of Calls</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>