force-app/main/default/objects/Opportunity/fields/NumberOfUnreachedCalls__c.field-meta.xml
<CustomField>
    <fullName>NumberOfUnreachedCalls__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stores number of consecutive unreached calls. Calculated by trigger. Used to check if we can close opportunity after number of unreached calls</description>
    <label>Number Of Unreached Calls</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>