force-app/main/default/objects/Opportunity/fields/OtherPhone__c.field-meta.xml
<CustomField>
    <fullName>OtherPhone__c</fullName>
    <description>This field is used to display the PA Other Phone on the Opp PL.</description>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>