force-app/main/default/objects/Opportunity/fields/PendingToDo__c.field-meta.xml
<CustomField>
    <fullName>PendingToDo__c</fullName>
    <description>List of unique pending to do task types assigned to this opportunity</description>
    <inlineHelpText>List of all open task which needs to be completed for an Opportunity</inlineHelpText>
    <label>Pending To Do</label>
    <length>255</length>
    <type>Text</type>
</CustomField>