force-app/main/default/objects/Opportunity/fields/PosInterestId__c.field-meta.xml
<CustomField>
    <fullName>PosInterestId__c</fullName>
    <description>Poseidon interest id</description>
    <externalId>true</externalId>
    <label>Pos Interest Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>