force-app/main/default/objects/Opportunity/fields/PreferredDuration__c.field-meta.xml
<CustomField>
    <fullName>PreferredDuration__c</fullName>
    <description>This is the preferred duration of customer which is stored from Lead/Opportunity screen.</description>
    <label>Preferred Duration</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 week</fullName>
            </value>
            <value>
                <fullName>2 weeks</fullName>
            </value>
            <value>
                <fullName>3 weeks</fullName>
            </value>
            <value>
                <fullName>4 weeks</fullName>
            </value>
            <value>
                <fullName>5 Weeks</fullName>
            </value>
            <value>
                <fullName>6 Weeks</fullName>
            </value>
            <value>
                <fullName>7 Weeks</fullName>
            </value>
            <value>
                <fullName>8 Weeks</fullName>
            </value>
            <value>
                <fullName>9 Weeks</fullName>
            </value>
            <value>
                <fullName>10 Weeks</fullName>
            </value>
            <value>
                <fullName>11 Weeks</fullName>
            </value>
            <value>
                <fullName>12 Weeks</fullName>
            </value>
            <value>
                <fullName>>12 Weeks</fullName>
            </value>
            <value>
                <fullName>Semester</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Extended Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>