force-app/main/default/objects/Opportunity/fields/RankingProbability__c.field-meta.xml
<CustomField>
    <fullName>RankingProbability__c</fullName>
    <label>Ranking Probability</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>