force-app/main/default/objects/Opportunity/fields/ReachedWithin48hrs__c.field-meta.xml
<CustomField>
    <fullName>ReachedWithin48hrs__c</fullName>
    <description>Indicates whether we have reached the customer within 48hr from opportunity creation</description>
    <formula>FirstContactDateTime__c - CreatedDate &lt;= 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reached within 48hrs</label>
    <type>Checkbox</type>
</CustomField>