force-app/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>This field is used to display the PA Region on the Opp PL.
Note: To be removed as soon as the PA component on the Opp PL is functional.</description>
    <formula>Account.Region__c</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>